@@ -117,6 +117,3 @@ setReplaceMethod("coordnames", signature(x = "SpatialPoints", value = "character
 	}
 )
 
-#setReplaceMethod("$", c("SpatialPoints", "character", "ANY"),
-#	function(x, name, value) SpatialPointsDataFrame(x, data.frame(name = value)) 
-#)
